--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul> -->
     </header>
     <!-- home start -->
-    <section class="home" id="home">
+    <!-- <section class="home" id="home">
       <div class="home-text">
         <h1>full website</h1>
         <h2>foods the <br />most precious thing</h2>
@@ -32,7 +32,7 @@
       <div class="home-img">
         <img src="image/home.png" alt="" />
       </div>
-    </section>
+    </section> -->
 
     <!-- home end -->
 
