--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <div class="bx bx-menu" id="menu-icon">
         <i class="fa-solid fa-bars"></i>
       </div>
-      <!-- <ul class="navbar">
+      <ul class="navbar">
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#menu">menu</a></li>
         <li><a href="#service">service</a></li>
         <li><a href="#contact">contact</a></li>
-      </ul> -->
+      </ul>
     </header>
     <!-- home start -->
-    <!-- <section class="home" id="home">
+    <section class="home" id="home">
       <div class="home-text">
         <h1>full website</h1>
         <h2>foods the <br />most precious thing</h2>
@@ -32,7 +32,7 @@
       <div class="home-img">
         <img src="image/home.png" alt="" />
       </div>
-    </section> -->
+    </section>
 
     <!-- home end -->
 
